test for the two different implementation seperately

--- a/opt-speed/makefile
+++ b/opt-speed/makefile
@@ -2,10 +2,10 @@ IDIR=./../include
 CC=gcc
 CFLAGS=-Wall -I$(IDIR)
 
-aes.out: main.o aes.o
+opt_aes.out: aes.o ./../test/main.o
 	$(CC) -o $@ $^ $(CFLAGS)
 
 clean:
-	rm -f aes.out
-	rm -f *.o
+	rm -f opt_aes.out
+	rm -f *.o ./../test/main.o
 	rm -f *~
